adding signup functionality

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   firebase_core: ^1.0.1
   font_awesome_flutter: ^9.0.0
   google_fonts: ^2.0.0
+  google_sign_in: ^5.0.1
   provider: ^5.0.0
 
 dev_dependencies:
