--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   firebase_storage: ^8.0.0
   flutter_custom_clippers: ^1.1.2
   flutter_gradient_colors: ^1.0.0
+  flutter_pdfview: ^1.1.0
   font_awesome_flutter: ^9.0.0
   google_fonts: ^2.0.0
   google_sign_in: ^5.0.1
