--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,12 +33,14 @@ dependencies:
   flutter_custom_clippers: ^1.1.2
   flutter_gradient_colors: ^1.0.0
   flutter_pdfview: ^1.1.0
+  flutter_video_compress: ^0.3.7+8
   font_awesome_flutter: ^9.0.0
   google_fonts: ^2.0.0
   google_sign_in: ^5.0.1
   image_picker: ^0.7.3
   provider: ^5.0.0
   timeago: ^3.0.2
+  video_player: ^2.0.2
 
 dev_dependencies:
   flutter_test:
