--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   google_fonts: ^2.0.0
   google_sign_in: ^5.0.1
   image_picker: ^0.7.3
+  page_transition: ^2.0.2
   provider: ^5.0.0
   timeago: ^3.0.2
   uuid: ^3.0.2
