--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,11 +39,11 @@ dependencies:
   google_sign_in: ^5.0.1
   image_picker: ^0.7.3
   page_transition: ^2.0.2
+  paginate_firestore: null
   provider: ^5.0.0
   timeago: ^3.0.2
   uuid: ^3.0.2
   video_player: ^2.1.0
-  paginate_firestore:
 
 dev_dependencies:
   flutter_test:
