--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   page_transition: ^2.0.2
   paginate_firestore: null
   provider: ^5.0.0
+  shared_preferences: ^2.0.5
   timeago: ^3.0.2
   uuid: ^3.0.2
   video_player: ^2.1.0
