--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,9 +40,12 @@ dependencies:
   image_picker: ^0.7.3
   page_transition: ^2.0.2
   paginate_firestore: null
+  pdf: ^3.3.0
   provider: ^5.0.0
   shared_preferences: ^2.0.5
+  syncfusion_flutter_pdfviewer: ^19.1.64-beta
   timeago: ^3.0.2
+  universal_html: ^2.0.8
   uuid: ^3.0.2
   video_player: ^2.1.0
 
