fixing login screen theme issue

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,12 +38,12 @@ dependencies:
   google_fonts: ^2.0.0
   google_sign_in: ^5.0.1
   image_picker: ^0.7.3
+  image_picker_web: ^2.0.2
   page_transition: ^2.0.2
   paginate_firestore: null
   pdf: ^3.3.0
   provider: ^5.0.0
   shared_preferences: ^2.0.5
-  syncfusion_flutter_pdfviewer: ^19.1.64-beta
   timeago: ^3.0.2
   universal_html: ^2.0.8
   uuid: ^3.0.2
