added clickable video link

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,7 +46,9 @@ dependencies:
   shared_preferences: ^2.0.5
   timeago: ^3.0.2
   universal_html: ^2.0.8
+  url_launcher: ^6.0.4
   uuid: ^3.0.2
+  validators: ^3.0.0
   video_player: ^2.1.0
 
 dev_dependencies:
