--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.9+9
+version: 1.0.10+10
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
@@ -37,6 +37,7 @@ dependencies:
   google_fonts: ^2.0.0
   google_sign_in: ^5.0.1
   image_picker: ^0.7.3
+  package_info_plus: ^1.0.1
   page_transition: ^2.0.2
   paginate_firestore: null
   path: ^1.8.0
